--- a/configs/envs/.env.eth
+++ b/configs/envs/.env.eth
@@ -46,3 +46,8 @@ NEXT_PUBLIC_TRANSACTION_INTERPRETATION_PROVIDER=blockscout
 
 #meta
 NEXT_PUBLIC_OG_IMAGE_URL=https://github.com/blockscout/frontend-configs/blob/main/configs/og-images/eth.jpg?raw=true
+
+NEXT_PUBLIC_AUTH0_CLIENT_ID=aB3p7zOmEwI4Kc6dYT7LAZ7IDgJlMO0v
+NEXT_PUBLIC_SENTRY_DSN=https://5eca4d9e210e3ce217b6929f380fba3a@o4505286348767232.ingest.sentry.io/4506508693078016
+SENTRY_CSP_REPORT_URI=https://sentry.io
+NEXT_PUBLIC_AD_BANNER_PROVIDER=hype
